--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "@microsoft/teamsfx": "file:../../../git/TeamsFx/packages/sdk/microsoft-teamsfx-0.7.0.tgz",
+    "@microsoft/teamsfx-core": "^1.21.0",
     "axios": "^0.27.2",
+    "js-yaml": "^4.1.0",
     "nock": "^13.2.9",
     "semver": "^7.3.7",
     "tslib": "^2.3.0",
