--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup project
-        run: ls
+        run: cat package.json
       - name: Setup project
         run: npm ci
